plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

configurations {
    compileClasspath
    annotationProcessor
}
group = 'com.mentoring'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.kafka:spring-kafka'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.kie:kie-api:7.74.0.Final'
	implementation 'org.drools:drools-core:7.74.0.Final'
	implementation 'org.drools:drools-compiler:7.74.0.Final'
	implementation 'org.drools:drools-decisiontables:7.74.0.Final'
	implementation 'org.kie:kie-ci:7.74.0.Final'
	
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	
}

tasks.named('test') {
	useJUnitPlatform()
}